--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <!-- Logo
 						============================================= -->
                         <div id="logo">
-                            <a href="index.html" class="retina-logo"><img src="https://o.remove.bg/downloads/14052140-fc07-4ab2-b625-5ac581b1bec7/Unknown-removebg-preview.png" alt="CentarNIT Logo"></a>
+                            <a href="index.html" class="retina-logo"><img src="images/headerlogo.png" alt="CentarNIT Logo"></a>
                         </div><!-- #logo end -->
                         <div class="header-misc">
                             <a class="top-phone" href="tel:+381-60-390-7000"><i class="icon-call"></i> <span class="d-none d-md-inline-block">+(381)60-390-7000</span></a>
